first implementation of base64 image encoding

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,2 @@
-facetrack/uploads/img_Tue Jan  4 04_27_33 2022_27.43C.jpg
-facetrack/uploads/img_Tue Jan  4 10_12_52 2022_27.69C.jpg
-facetrack/uploads/img18492.963093195.jpg
+facetrack/uploads/*
+facetrack/decode_test/*
